--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,34 +1,46 @@
-name: ASP.NET CI/CD Pipeline
+name: .NET CI Pipeline
 
 on:
   push:
-    branches:
-      - main       
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
-  build:
-    runs-on: windows-latest 
+  build_and_test:
+    runs-on: windows-latest
 
     steps:
+      # 1) Check out your repository code
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
+      # 2) Set up the .NET 8 SDK (change "8.0.x" if you need a specific version)
       - name: Setup .NET
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8.0'  
+          dotnet-version: '8.0.x'
 
+      # 3) Restore NuGet packages
       - name: Restore dependencies
         run: dotnet restore
 
+      # 4) Build the solution in Release mode
       - name: Build solution
         run: dotnet build --configuration Release --no-restore
 
+      # 5) Run tests
       - name: Run tests
         run: dotnet test --no-build --verbosity normal
 
+      # 6) Publish the application (outputs go to ./publish folder)
       - name: Publish application
         run: dotnet publish --configuration Release --output ./publish --no-build
+
+      # 7) (Optional) Upload the published files as an artifact
+      #    so you can access them (e.g., to download or use in another job).
+      - name: Upload publish artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: published-app
+          path: ./publish
